--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "color-extractor-api",
   "version": "1.0.0",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
@@ -15,5 +14,8 @@
     "canvas": "^3.1.0",
     "colorthief": "^2.6.0",
     "get-image-colors": "^4.0.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
